mobile spacing issues

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -96,7 +96,7 @@
         width: 100%;
         z-index: 8;
         background-color: white;
-        padding: 0em 0em 1em 0em;
+        padding: 0em 1.8em 1em 1.8em;
     }
     .nav-toggle {
         margin: 0px auto;
@@ -117,7 +117,7 @@
         a {
             height: 34px;
             font-size: 22px;
-            padding: 0em 2.5em;
+            padding: 0em 1.1em;
         }
         a.nuxt-link-exact-active {
             text-decoration: none;
